# GetFiles

./: .gitignore  README.md  pyproject.toml
getfiles/: GetFiles.py  __init__.py
tests/: test_get_files.py
